Plugin Name: CoursePress Pro
Author: Marko Miljus ( Incsub ) / Rheinard Korf ( Incsub )

CHANGE LOG
=================================================

== Changelog ==

= 1.2.3.5 =
* Fixed (potential) issue with student signup when FORCE_SSL_ADMIN is turned on
* Fixed conflicts with Gravity Forms (admin and unit pages)
* Fixed issue with multisite and granting and revoking instructor capabilities.
* Fixed: Comments section no longer showing on course details page.
* Fixed issue with 'Start Learning/Continue Learning' buttons not showing for courses set to manual enrollments.
* Fixed: Instructor Capabilities On User Profile Page Not Saving When Granting/Revoking Capabilities
* Fixed: coursepress_student_withdrawn hook is firing twice for a single withdrawal
* Fixed issue with unique course and units slugs

= 1.2.3.4 =
* Added additional instructor capability for managing Course Categories
* Added unit elements preloader
* Course completion actions added for developers: 'coursepress_student_course_completed', 'coursepress_student_course_unit_completed'
* Unit completion actions added for developers: 'coursepress_student_course_unit_pages_viewed', 'coursepress_student_course_unit_mandatory_question_answered', 'coursepress_student_course_unit_gradable_question_passed'
* New options for "Who can enroll" when not allowing anyone to register to your site.
* Fixed WordPress 4.1 issues (hidden course list in the admin, hidden assessment list)
* Fixed "administrator" role for network sites.
  CoursePress menus and permissions now work properly for new sites.
  For old sites the administrator's role will have to be reset (change to "subscriber" then back to "administrator").
* Fixed shortcode typos on the settings page
* Fixed issue with prerequisite courses for non-logged-in users
* Fixed issues with enrollment/signup button
* Fixes issue with unit editors upon reordering elements (Firefox)
* Strip html tags from the assessment comment ALT and TITLE